# Debugger

./: .gitignore  Cargo.toml  README.md
docs/: arch2.drawio
program_target/: main  main.c  makefile  seg_fault  seg_fault.c  test_loop  test_loop.c  test_step  test_step.c
src/: breakpoint.rs  command_handler.rs  debugger.rs  elf_debug_info.rs  lib.rs  main.rs  registers.rs  signal_handler.rs  target.rs  tui.rs
src/arm_target/: backtrace.rs  debugger.rs  gdb_protocol.rs  mod.rs  registers.rs  repl.rs  target_impl.rs
src/x86_target/: backtrace.rs  breakpoint.rs  debugger.rs  mod.rs  registers.rs  repl.rs  signal_handler.rs  target_impl.rs
