[package]
name = "linux_debugger"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
gimli = "0.32.3"
memmap2 = "0.9.9"
nix = { version = "0.30.1", features = ["ptrace"] }
object = "0.38.0"
rustyline = "17.0.1"
self_cell = "1.2.2"
strum = { version = "0.27.2", features = ["derive"] }
