[package]
name = "linux_debugger"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
crossterm = "0.29.0"
gimli = "0.33.0"
memmap2 = "0.9.9"
nix = { version = "0.31.3", features = ["ptrace"] }
object = "0.39.1"
ratatui = "0.30.2"
rustyline = "18.0.0"
self_cell = "1.2.2"
strum = { version = "0.28.0", features = ["derive"] }
